# OOP-8

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
doc/: Лр 8 Кожуховский.docx
src/: main.py  main_2.py  main_3.py  main_4.py  main_5.py
